--- a/wiki/OpenduckbillAccessControl.wiki
+++ b/wiki/OpenduckbillAccessControl.wiki
@@ -55,13 +55,16 @@
             # Don't print out anything from the script, since that would break rsync.
 	    $SSH_ORIGINAL_COMMAND
 	    ;;
+          test\ -d*)
+            $SSH_ORIGINAL_COMMAND
+            ;;
 	  *)
 	    echo "Access restricted"
             exit 1
 	    ;;
 	esac 
 }}}
-  The variable SSH_ORIGINAL_COMMAND is the command that is going to be executed in the server. In this script, we check if the command is an `rsync --server` command, which is used by openduckbill to transfer data. If it matches the "case", the command is executed else the connection is disconnected. Enabling this script will also block ssh login access from odbuser@odbclient.
+  The variable SSH_ORIGINAL_COMMAND is the command that is going to be executed in the server. In this script, we check if the command is an `rsync --server` command, which is used by openduckbill to transfer data. Also, the "test -d" is used by openduckbill for checking backup directory in the remote server. If it matches the "case", the command is executed else the connection is disconnected. Enabling this script will also block ssh login access from odbuser@odbclient.
 
   The exit code 1 might be useful if client programs depends on exit codes from the ssh command.
 
